# wh40k-tts-editor

./: .gitignore  LICENCE  README.md  pyproject.toml
src/: run_editor.py  tts_editor.py
src/tts_editor/: __init__.py  app.py  main.py
src/tts_editor/models/: __init__.py  unit.py
src/tts_editor/ui/: __init__.py  main_window.py  structured_editor.py  text_editor.py
src/tts_editor/utils/: __init__.py  color_formatter.py  description_parser.py
